fixed aligning

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -30,6 +30,7 @@ border-style: solid;
 border-spacing: 3px;
 border-width: 2px;
 display: inline-block;
+ vertical-align: top;
 padding: 10px;
 margin: 10px;
 width:20%;
